[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/computer/computer.gd" type="Script" id=1]
[ext_resource path="res://objects/computer/computer.png" type="Texture" id=2]
[ext_resource path="res://interface/progress_bar_fg.tres" type="StyleBox" id=3]
[ext_resource path="res://interface/progress_bar_bg.tres" type="StyleBox" id=4]
[ext_resource path="res://interface/theme.tres" type="Theme" id=5]
[ext_resource path="res://actors/enemies/bugs.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 128, 80 )

[node name="computer" type="Area2D"]

position = Vector2( 296, 192 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
icons_path = null

[node name="shape" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 128, 72 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Region" ]

[node name="progress_bar" type="ProgressBar" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 72.0
margin_right = 184.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = ExtResource( 4 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "custom_styles" ]

[node name="debug" type="Label" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = -24.0
margin_right = 150.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 5 )
text = "debug!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="bugs" parent="." index="4" instance=ExtResource( 6 )]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_area_exited"]

[connection signal="value_changed" from="progress_bar" to="." method="_on_progress_bar_value_changed"]


